WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132538
[iOS] REGRESSION (WebKit2): Page isn't clipped properly during back/forward swipe
https://bugs.webkit.org/show_bug.cgi?id=132538
Summary
[iOS] REGRESSION (WebKit2): Page isn't clipped properly during back/forward s...
Tim Horton
Reported
2014-05-03 17:57:58 PDT
There's nothing clipping the page during a swipe, so if you're zoomed in, you don't see the edge of the page, just more tiles. <
rdar://problem/16266027
>
Attachments
patch
(5.17 KB, patch)
2014-05-03 18:00 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-05-03 18:00:25 PDT
Created
attachment 230776
[details]
patch
WebKit Commit Bot
Comment 2
2014-05-03 18:55:47 PDT
Comment on
attachment 230776
[details]
patch Clearing flags on attachment: 230776 Committed
r168234
: <
http://trac.webkit.org/changeset/168234
>
WebKit Commit Bot
Comment 3
2014-05-03 18:55:49 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug