[iOS] REGRESSION (WebKit2): Page isn't clipped properly during back/forward swipe https://bugs.webkit.org/show_bug.cgi?id=132538 <rdar://problem/16266027>

Reviewed by Simon Fraser.

* UIProcess/ios/ViewGestureControllerIOS.mm:
(WebKit::ViewGestureController::beginSwipeGesture):
(WebKit::ViewGestureController::endSwipeGesture):
* UIProcess/mac/ViewGestureController.h:
Add a clipping layer above the live swipe layer, which explicitly clips to bounds.


Canonical link: https://commits.webkit.org/150558@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168234 268f45cc-cd09-0410-ab3c-d52691b4dbfc